@@ -813,8 +813,13 @@ register struct obj *obj;
 {
 	int wt = objects[obj->otyp].oc_weight;
 
-	if (obj->otyp == LARGE_BOX && obj->spe == 1) /* Schroedinger's Cat */
+	if (obj->otyp == LARGE_BOX && obj->spe) { /* Schroedinger's Cat */
+	    if(obj->spe == 1) {
 		wt += mons[PM_HOUSECAT].cwt;
+	    } else if(obj->spe == 4) {
+		wt += mons[PM_VAMPIRE].cwt;
+	    }
+	}
 	if (Is_container(obj) || obj->otyp == STATUE) {
 		struct obj *contents;
 		register int cwt = 0;
