@@ -54,6 +54,7 @@
 	* Replace Sokoban's Amulet of ESP with an Amulet of Flying
 	* Eating a disenchanter corpse cures hallucination and has a chance of
 	  removing a random intrinsic, 20% chance if hallucinating, 50% otherwise
+	* Vlad's Tower now contains "coffins" instead of chests
 	
 
 	* Artifact changes:
